Fix ERROR:  relation users already exists

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@ The number of Users will be displayed here
 =end%>
 
 <div class="container">
- <h1 class="heading">InstaRails</h1>
+ <h1 class="heading">Blogs</h1>
  <% @users.each do |user|%>
  <a href="/users/<%= user.id%>">
    <div class="users-list">
