--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,113 +1,113 @@
 /* Stylesheet is below... */
 
 * {
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #021e09;
-    color: white;
-  }
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #021e09;
+  color: white;
+}
 
-  a {
-    color: black;
-    text-decoration: none;
-  }
+a {
+  color: black;
+  text-decoration: none;
+}
 
-  .container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    gap: 20px;
-    align-items: center;
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+}
 
-  .heading {
-    width: 100%;
-    background-color: #ffffff;
-    color: #173a09;
-    text-align: center;
-  }
+.heading {
+  width: 100%;
+  background-color: #fff;
+  color: #173a09;
+  text-align: center;
+}
 
- .users-list,
- .detail-description,
- .detail-container {
-   width: auto;
-   display: flex;
-   gap: 10px;
- }
+.users-list,
+.detail-description,
+.detail-container {
+  width: auto;
+  display: flex;
+  gap: 10px;
+}
 
- img {
-   width: 200px;
-   height: auto;
-   border: 2px solid white;
-   border-radius: 10px;
- }
+img {
+  width: 200px;
+  height: auto;
+  border: 2px solid white;
+  border-radius: 10px;
+}
 
- .description :hover {
-   color: rgb(185, 183, 183);
-   transition: 0.2s ease-in-out;
- }
+.description :hover {
+  color: rgb(185, 183, 183);
+  transition: 0.2s ease-in-out;
+}
 
- .user-detail,
- .post-detail {
-   padding: 20px;
- }
+.user-detail,
+.post-detail {
+  padding: 20px;
+}
 
- .single-post {
-    border: 1px solid white;
-    margin: 10px 0 10px 0;
-    padding: 10px;
-    width: 50%;
-  }
+.single-post {
+  border: 1px solid white;
+  margin: 10px 0 10px 0;
+  padding: 10px;
+  width: 50%;
+}
 
-  .single-post:hover h2 {
-    color: #d4d4ff;
-    transition: 0.1s ease-in;
-  }
+.single-post:hover h2 {
+  color: #d4d4ff;
+  transition: 0.1s ease-in;
+}
 
-  .bio p {
-    font-style: italic;
-  }
+.bio p {
+  font-style: italic;
+}
 
-  .button {
-    background-color: white;
-    color: #323253;
-    padding: 5px 10px;
-    border-radius: 5px;
-  }
+.button {
+  background-color: white;
+  color: #323253;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
 
-  .button:hover {
-    background-color: #a0a0e9;
-    transition: 0.16s ease;
-  }
+.button:hover {
+  background-color: #a0a0e9;
+  transition: 0.16s ease;
+}
 
- .detail-container {
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
+.detail-container {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
 
-  hr {
-    width: 50%;
-  }
+hr {
+  width: 50%;
+}
 
-  .one-comment {
-    border: 1px solid white;
-    margin: 10px 0 10px 0;
-    padding: 10px;
-    width: 50%;
-  }
+.one-comment {
+  border: 1px solid white;
+  margin: 10px 0 10px 0;
+  padding: 10px;
+  width: 50%;
+}
 
-  .one-comment:hover h2 {
-    color: #d4d4ff;
-    font-size: 26px;
-    transition: 0.1s ease-in;
-  }
+.one-comment:hover h2 {
+  color: #d4d4ff;
+  font-size: 26px;
+  transition: 0.1s ease-in;
+}
 
-  .comment-container {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
+.comment-container {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
