--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,7 @@
 <%
 =begin%>
-Posts will be displayed here
 <%
 =end%>
-
  <div class="post-detail">
 
  <div class="detail-container">
@@ -19,7 +17,7 @@ Posts will be displayed here
      <div class="recent-posts">
          <% @posts.each do |post| %>
          <div class="one-comment">
-             <a href="./<%=post.id%>">
+             <%= link_to user_post_path(@user, post.id) do%>
                  <h2><%= post.title %>
                  </h2>
                  <p id="post-text">
@@ -36,7 +34,7 @@ Posts will be displayed here
                          </div>
                      <% end %>
              </div>
-             </a>
+             <% end %>
              </div>
          <% end %>
      </div>
