--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,10 @@
-/* Stylesheet is below... */
+/* styles.scss */
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
+}
+
+html, body {
   font-family: 'Lato', sans-serif;
   margin: 0;
   padding: 0;
@@ -10,7 +13,7 @@
 }
 
 a {
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
@@ -25,7 +28,7 @@ a {
 
 .heading {
   width: 100%;
-  background-color: #fff;
+  background-color: #ffffff;
   color: #173a09;
   text-align: center;
 }
@@ -45,7 +48,7 @@ img {
   border-radius: 10px;
 }
 
-.description :hover {
+.description:hover {
   color: rgb(185, 183, 183);
   transition: 0.2s ease-in-out;
 }
@@ -55,11 +58,16 @@ img {
   padding: 20px;
 }
 
+.recent-posts {
+  color: white;
+}
+
 .single-post {
   border: 1px solid white;
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
   padding: 10px;
   width: 50%;
+  color: white;
 }
 
 .single-post:hover h2 {
@@ -84,8 +92,7 @@ img {
 }
 
 .detail-container {
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin: 20px 0 10px;
 }
 
 hr {
@@ -94,7 +101,7 @@ hr {
 
 .one-comment {
   border: 1px solid white;
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
   padding: 10px;
   width: 50%;
 }
@@ -110,4 +117,43 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.comment-like-button {
+  display: flex;
+  gap: 10px;
+}
+
+.comment-like-button a {
+  color: rgb(0, 0, 0);
+}
+
+.single-button {
+  padding: 5px 10px;
+  color: rgb(0, 0, 0);
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.single-button:hover {
+  background-color: #3b3b7a;
+  transition: 0.2s ease;
+}
+
+.comment-box {
+  width: 200px;
+  padding: 5px;
+  border: 1px solid white;
+  color: rgb(0, 0, 0);
+
+  &::placeholder {
+    color: rgb(126, 126, 126);
+  }
+}
+
+.comment-button {
+  padding: 5px 10px;
+  color: rgb(0, 0, 0);
+  border: 1px solid white;
+  border-radius: 5px;
 }
