--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
 
 
      <div class="recent-posts">
-         <% @posts.each do |post| %>
+         <% @posts.includes(comments:[:author]).each do |post| %>
          <div class="one-comment">
              <%= link_to user_post_path(@user, post.id) do%>
                  <h2><%= post.title %>
