Update views(posts/show.html.rb) to include Authors

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@ Number of posts by the user diplayed here
      </div>
              <div class="comments-container-post">
                  <% @comments=Post.find(@post.id).comments %>
-                     <% @comments.each do |comment| %>
+                     <% @comments.includes(:author).each do |comment| %>
                          <div  id="single-comment">
                              <span> <%= comment.author.name %> : <%= comment.text %></span>
                          </div>
