--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,3 +160,57 @@ hr {
   border: 1px solid white;
   border-radius: 5px;
 }
+
+.devise-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+  border: 2px dotted whitesmoke;
+}
+
+.devise-container label {
+  color: white;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-field {
+  color: white;
+  padding: 1rem;
+  width: 100%;
+  margin-top: 5%;
+  border-radius: 0.8em;
+}
+
+.devise-container a {
+  color: white;
+}
+
+.remember-field {
+ margin-top: 5%;
+}
+
+.remember-me-label {
+  margin-left: 100px;
+}
+
+.actions {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.actions input {
+  margin: 6% auto;
+  padding: 1rem;
+}
+
+#user_email {
+  margin: 6% auto;
+  font-family: 'lato', sans-serif;
+  font-size: 1em;
+  padding: 1rem;
+}
+
